# dl-anywhere

./: .gitignore  Cargo.toml  LICENSE_MIT  package-lock.json
resource/: .gitignore  package.json  tsconfig.json  webpack.config.js
resource/src/: App.tsx  bootstrap.tsx  index.html
resource/src/components/: TranslationResultForm.tsx  buttonGroup.tsx  formTargetText.tsx
resource/src/consts/: lang.ts
resource/src/models/: translate.ts
src/: env.rs  lib.rs
