[package]
name = "dl-anywhere"
version = "0.1.0"
authors = ["yoseiito <y.ito1003@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]  }
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
futures = "0.3"
dotenv = "0.15.0"

[dependencies.web-sys]
version = "0.3.51"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'console',
    'UrlSearchParams',
]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
